fixed legendlabel text align

--- a/src/styles/_map-legend.scss
+++ b/src/styles/_map-legend.scss
@@ -60,6 +60,7 @@ div.submissions {
 .legendlabel {
   text-transform: uppercase;
   font-size: 1.2rem !important;
+  text-align: left;
 }
 
 .legendbox {
